--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 <!--					<providerImplementations>-->
 <!--						<svn>javasvn</svn>-->
 <!--					</providerImplementations>-->
-					<goals>deploy</goals>
+					<goals>install</goals>
 <!--					<tagBase>https://svn.somedomain/project/tags</tagBase>-->
 <!--					<autoVersionSubmodules>true</autoVersionSubmodules>-->
 				</configuration>
