--- a/release.properties
+++ b/release.properties
@@ -1,29 +1,22 @@
 #release configuration
-#Wed Apr 28 19:35:47 ICT 2021
+#Wed Apr 28 20:22:06 ICT 2021
 projectVersionPolicyId=default
-scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
-pushChanges=true
-project.scm.guru.guru.springframwork\:sfg-pet-clinic.url=http\://somerepository.com/view.cvs
-project.scm.guru.guru.springframwork\:sfg-pet-clinic.developerConnection=scm\:svn\:https\://somerepository.com/svn_repo/trunk
-project.scm.guru.guru.springframwork\:pet-clinic-data.connection=scm\:svn\:http\://somerepository.com/svn_repo/trunk
-project.scm.guru.guru.springframwork\:pet-clinic-web.connection=scm\:svn\:http\://somerepository.com/svn_repo/trunk
-project.scm.guru.guru.springframwork\:pet-clinic-data.url=http\://somerepository.com/view.cvs
-scm.rollbackCommitComment=@{prefix} rollback the release of @{releaseLabel}
 remoteTagging=true
-project.scm.guru.guru.springframwork\:pet-clinic-web.tag=HEAD
 scm.commentPrefix=[maven-release-plugin] 
-releaseStrategyId=default
-project.scm.guru.guru.springframwork\:sfg-pet-clinic.tag=HEAD
-project.scm.guru.guru.springframwork\:sfg-pet-clinic.connection=scm\:svn\:http\://somerepository.com/svn_repo/trunk
-completedPhase=check-poms
-project.scm.guru.guru.springframwork\:pet-clinic-data.developerConnection=scm\:svn\:https\://somerepository.com/svn_repo/trunk
-scm.url=scm\:svn\:https\://somerepository.com/svn_repo/trunk
-scm.developmentCommitComment=@{prefix} prepare for next development iteration
+project.scm.guru.guru.springframwork\:sfg-pet-clinic.tag=sfg-pet-clinic-0.0.1
+project.dev.guru.guru.springframwork\:sfg-pet-clinic=1.0.4-SNAPSHOT
+project.rel.guru.guru.springframwork\:sfg-pet-clinic=1.0.3
+project.dev.guru.guru.springframwork\:pet-clinic-data=1.0.4-SNAPSHOT
+completedPhase=run-preparation-goals
+scm.url=scm\:git\:git@github.com\:gilbertttsubay/sfg-pet-clinic.git
+project.rel.guru.guru.springframwork\:pet-clinic-web=1.0.3
+project.scm.guru.guru.springframwork\:pet-clinic-data.empty=true
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
-project.scm.guru.guru.springframwork\:pet-clinic-data.tag=HEAD
-project.scm.guru.guru.springframwork\:pet-clinic-web.url=http\://somerepository.com/view.cvs
+pushChanges=true
+project.scm.guru.guru.springframwork\:pet-clinic-web.empty=true
+project.dev.guru.guru.springframwork\:pet-clinic-web=1.0.4-SNAPSHOT
+project.scm.guru.guru.springframwork\:sfg-pet-clinic.developerConnection=scm\:git\:git@github.com\:gilbertttsubay/sfg-pet-clinic.git
+scm.tag=sfg-pet-clinic-1.0.3
+project.rel.guru.guru.springframwork\:pet-clinic-data=1.0.3
 exec.snapshotReleasePluginAllowed=false
-project.scm.guru.guru.springframwork\:pet-clinic-web.developerConnection=scm\:svn\:https\://somerepository.com/svn_repo/trunk
 preparationGoals=clean verify
-scm.releaseCommitComment=@{prefix} prepare release @{releaseLabel}
-exec.pomFileName=pom.xml
