--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
 	<groupId>guru.guru.springframwork</groupId>
 	<artifactId>sfg-pet-clinic</artifactId>
-	<version>1.0.3-SNAPSHOT</version>
+	<version>1.0.3</version>
 	<name>sfg-pet-clinic</name>
 	<description>Spring training using Pet Clinic Theme</description>
 	<properties>
@@ -52,6 +52,8 @@
 					<goals>install</goals>
 <!--					<tagBase>https://svn.somedomain/project/tags</tagBase>-->
 <!--					<autoVersionSubmodules>true</autoVersionSubmodules>-->
+					<localCheckout>true</localCheckout>
+					<pushChanges>false</pushChanges>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -60,5 +62,6 @@
 
 	<scm>
 		<developerConnection>scm:git:git@github.com:gilbertttsubay/sfg-pet-clinic.git</developerConnection>
+    <tag>sfg-pet-clinic-1.0.3</tag>
   </scm>
 </project>
