--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,6 @@
 	</build>
 
 	<scm>
-		<developerConnection>scm:git:git@github.com:gilbertttsubay/sfg-pet-clinic.git</developerConnection>
-    <tag>sfg-pet-clinic-1.0.3</tag>
+		<developerConnection>scm:git:https://github.com/gilbertttsubay/sfg-pet-clinic.git</developerConnection>
   </scm>
 </project>
