--- a/release.properties
+++ b/release.properties
@@ -1,13 +1,13 @@
 #release configuration
-#Wed Apr 28 20:28:40 ICT 2021
+#Wed Apr 28 20:38:05 ICT 2021
 projectVersionPolicyId=default
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-project.scm.guru.guru.springframwork\:sfg-pet-clinic.tag=sfg-pet-clinic-0.0.1
+project.scm.guru.guru.springframwork\:sfg-pet-clinic.tag=HEAD
 project.dev.guru.guru.springframwork\:sfg-pet-clinic=1.0.4-SNAPSHOT
 project.rel.guru.guru.springframwork\:sfg-pet-clinic=1.0.3
 project.dev.guru.guru.springframwork\:pet-clinic-data=1.0.4-SNAPSHOT
-completedPhase=scm-commit-release
+completedPhase=run-preparation-goals
 scm.url=scm\:git\:git@github.com\:gilbertttsubay/sfg-pet-clinic.git
 project.rel.guru.guru.springframwork\:pet-clinic-web=1.0.3
 project.scm.guru.guru.springframwork\:pet-clinic-data.empty=true
