--- a/release.properties
+++ b/release.properties
@@ -1,5 +1,5 @@
 #release configuration
-#Wed Apr 28 20:38:05 ICT 2021
+#Wed Apr 28 20:44:40 ICT 2021
 projectVersionPolicyId=default
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
@@ -7,15 +7,15 @@ project.scm.guru.guru.springframwork\:sfg-pet-clinic.tag=HEAD
 project.dev.guru.guru.springframwork\:sfg-pet-clinic=1.0.4-SNAPSHOT
 project.rel.guru.guru.springframwork\:sfg-pet-clinic=1.0.3
 project.dev.guru.guru.springframwork\:pet-clinic-data=1.0.4-SNAPSHOT
-completedPhase=run-preparation-goals
-scm.url=scm\:git\:git@github.com\:gilbertttsubay/sfg-pet-clinic.git
+completedPhase=scm-commit-release
+scm.url=scm\:git\:https\://github.com/gilbertttsubay/sfg-pet-clinic.git
 project.rel.guru.guru.springframwork\:pet-clinic-web=1.0.3
 project.scm.guru.guru.springframwork\:pet-clinic-data.empty=true
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
 pushChanges=true
 project.scm.guru.guru.springframwork\:pet-clinic-web.empty=true
 project.dev.guru.guru.springframwork\:pet-clinic-web=1.0.4-SNAPSHOT
-project.scm.guru.guru.springframwork\:sfg-pet-clinic.developerConnection=scm\:git\:git@github.com\:gilbertttsubay/sfg-pet-clinic.git
+project.scm.guru.guru.springframwork\:sfg-pet-clinic.developerConnection=scm\:git\:https\://github.com/gilbertttsubay/sfg-pet-clinic.git
 scm.tag=sfg-pet-clinic-1.0.3
 project.rel.guru.guru.springframwork\:pet-clinic-data=1.0.3
 exec.snapshotReleasePluginAllowed=false
