--- a/pom.xml
+++ b/pom.xml
@@ -61,5 +61,6 @@
 	<scm>
 		<url>https://github.com/gilbertttsubay/sfg-pet-clinic</url>
 		<developerConnection>scm:git:https://github.com/gilbertttsubay/sfg-pet-clinic.git</developerConnection>
+    <tag>sfg-pet-clinic-1.0.3</tag>
   </scm>
 </project>
