--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
 	<groupId>guru.guru.springframwork</groupId>
 	<artifactId>sfg-pet-clinic</artifactId>
-	<version>1.0.5-SNAPSHOT</version>
+	<version>1.0.5</version>
 	<name>sfg-pet-clinic</name>
 	<description>Spring training using Pet Clinic Theme</description>
 	<properties>
@@ -51,7 +51,7 @@
 <!--					</providerImplementations>-->
 					<goals>install</goals>
 <!--					<tagBase>https://svn.somedomain/project/tags</tagBase>-->
-<!--					<autoVersionSubmodules>true</autoVersionSubmodules>-->
+					<autoVersionSubmodules>true</autoVersionSubmodules>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -62,6 +62,6 @@
 		<url>https://github.com/gilbertttsubay/sfg-pet-clinic</url>
 		<developerConnection>scm:git:https://github.com/gilbertttsubay/sfg-pet-clinic.git</developerConnection>
 
-    <tag>HEAD</tag>
+    <tag>sfg-pet-clinic-1.0.5</tag>
   </scm>
 </project>
