--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
 	<groupId>guru.guru.springframwork</groupId>
 	<artifactId>sfg-pet-clinic</artifactId>
-	<version>1.0.5</version>
+	<version>1.0.6-SNAPSHOT</version>
 	<name>sfg-pet-clinic</name>
 	<description>Spring training using Pet Clinic Theme</description>
 	<properties>
@@ -62,6 +62,6 @@
 		<url>https://github.com/gilbertttsubay/sfg-pet-clinic</url>
 		<developerConnection>scm:git:https://github.com/gilbertttsubay/sfg-pet-clinic.git</developerConnection>
 
-    <tag>sfg-pet-clinic-1.0.5</tag>
+    <tag>HEAD</tag>
   </scm>
 </project>
