--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<skip>
+						false
+					</skip>
+				</configuration>
 			</plugin>
 			<plugin>
 				<dependencies>
